overflow fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,8 @@
 
 .container {
     width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
     min-height: 100vh;
     background-color: $primary-color;
 }
