--- a/src/app/pages/main/about-me/about-me.component.scss
+++ b/src/app/pages/main/about-me/about-me.component.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 
     & > #section-content {
         display: flex;
@@ -50,7 +51,7 @@ p {
     padding: 5px;
 
     & > .image-profile {
-        background-image: url("assets/images/profile.png");
+        background-image: url("/assets/images/profile.png");
         background-size: cover;
         width: 100%;
         height: 100%;
@@ -62,15 +63,15 @@ p {
 
 .background_photo1 {
     position: absolute;
-    right: -5%;
+    left: 45%;
     top: calc(50% - 150px);
     max-width: 400px;
     max-height: 400px;
     min-width: 100px;
     min-height: 100px;
-    width: 60%;
-    height: 60%;
-    background-image: url("assets/images/background_photo1.png");
+    width: 40%;
+    height: 40%;
+    background-image: url("/assets/images/background_photo1.png");
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 0;
