--- a/src/app/pages/main/projects/projects.component.scss
+++ b/src/app/pages/main/projects/projects.component.scss
@@ -16,6 +16,7 @@
     align-items: flex-start;
     height: 100%;
     padding: 0px 50px;
+    // overflow-x: hidden;
 
     @media (max-width: 768px) {
         padding: auto;
@@ -39,7 +40,7 @@
             width: 100%;
             height: 100%;
             background-color: #fff;
-            background-image: url("assets/images/projects/snake.png");
+            background-image: url("/assets/images/projects/snake.png");
             background-size: cover;
             border-radius: 10px;
             top: 8px;
@@ -78,7 +79,7 @@
         & > .link {
             width: 46px;
             height: 46px;
-            background-image: url("assets/images/link.png");
+            background-image: url("/assets/images/link.png");
             background-size: cover;
             transition: 0.6s;
             &:hover {
@@ -101,11 +102,20 @@ h2 {
     font-weight: 100;
 }
 
+.message-alert-container {
+    position: absolute;
+    top: -150px;
+
+    width: 100vw;
+    height: 200px;
+    overflow: hidden;
+}
+
 .message-alert {
     position: absolute;
     display: flex;
     align-items: center;
-    top: -150px;
+    // top: -150px;
     right: -10px;
     padding: 10px 0px;
     padding-left: 25px;
@@ -141,7 +151,7 @@ h2 {
         border-radius: 50%;
         background-color: $secondary-color;
         z-index: 0;
-        background-image: url("assets/images/link.png");
+        background-image: url("/assets/images/link.png");
         background-size: contain;
         border: 4px solid $secondary-color;
         @include bg-shadow;
@@ -185,7 +195,7 @@ h2 {
             left: 10px;
             width: 28px;
             height: 28px;  
-            background-image: url("assets/images/github.png");
+            background-image: url("/assets/images/github.png");
             background-size: contain;
         }
 
